# algexenotation

./: .gitignore  Cargo.toml  README.md
examples/: bench.rs  count_bits.rs  eval.rs  fast_sieve.rs  goldbach_five.rs  graph.rs  hyperprimes.rs  lonely.rs  md.rs  md_predict.rs  mul.rs  pd.rs  pd_predict.rs  pmd.rs  pmd_predict.rs  pow.rs  pow_mul.rs  power_patterns.rs  primbix.rs  primbix_levels.rs  prime_iter.rs  prime_iter2.rs  prime_lookup.rs  quad.rs  sieve.rs  triangle.rs  type.rs
src/: hyperprimes.rs  lib.rs  m3.rs  primes.rs
